Updated file names and connections, function shells for register.js

--- a/register.html
+++ b/register.html
@@ -28,6 +28,6 @@
 		<input type="button" class="submit" id="submit" value="Submit">
 </body>
 
-<script src="FormToJSON.js"></script>
+<script src="register.js"></script>
 
 </html>
