--- a/login.html
+++ b/login.html
@@ -19,6 +19,6 @@
 		<input type="button" class="submit" id="submit" value="Submit">
 </body>
 
-<script src="FormToJSON.js"></script>
+<script src="login.js"></script>
 
 </html>
