Validate.js, slight updates to js files

--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
 		<input type="button" class="submit" id="submit" value="Submit">
 </body>
 
+<script src="validate.js"></script>
 <script src="login.js"></script>
 
 </html>
