--- a/register.html
+++ b/register.html
@@ -28,6 +28,7 @@
 		<input type="button" class="submit" id="submit" value="Submit">
 </body>
 
+<script src="validate.js"><script>
 <script src="register.js"></script>
 
 </html>
