Fixed script location and click function add location

--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
 	<script src=
 		"https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
 	></script>
+	<script src="validate.js"></script>
+	<script src="login.js"></script>
 </head>
 
 <body>
@@ -16,10 +18,9 @@
 		PW:<br/>
 		<input type="password" class="pwField" id="pwField">
 		<br/>
-		<input type="button" class="submit" id="submit" value="Submit">
+		<input type="button" class="submit" id="submit"
+		 value="Submit" onclick="doThis()">
 </body>
 
-<script src="validate.js"></script>
-<script src="login.js"></script>
 
 </html>
