--- a/register.html
+++ b/register.html
@@ -6,6 +6,8 @@
 	<script src=
 		"https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
 	></script>
+	<script src="validate.js"></script>
+	<script src="register.js"></script>
 </head>
 
 <body>
@@ -25,10 +27,8 @@
 		2FA Password:<br/>
 		<input type="password" class="2FA" id="2FA">
 		<br/><br>
-		<input type="button" class="submit" id="submit" value="Submit">
+		<input type="button" class="submit" id="submit"
+		value="Submit" onclick="doThis()" >
 </body>
-
-<script src="validate.js"><script>
-<script src="register.js"></script>
 
 </html>
