--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>2FACloud</title>
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-<script>
+<script src="login.js">
     </script>
 
 
