Added js folder for all js files, updated js links in login.html and register.html, also added code snippet for qrcode page.

--- a/login.html
+++ b/login.html
@@ -1,25 +1,24 @@
 <html>
 <title>2FA Cloud</title>
+
 <head>
-	<!--Feel free to change, I don't know what you want to do here-->
-	<link rel="stylesheet" href="style.css">
-	<script src=
-		"https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
-	></script>
-	<script src="validate.js"></script>
-	<script src="login.js"></script>
+    <!--Feel free to change, I don't know what you want to do here-->
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/validate.js"></script>
+    <script src="js/login.js"></script>
 </head>
 
 <body>
-	<form class="inputForm" id="inputForm">
-		Username:<br/>
-		<input type="text" class="usernameField" id="usernameField">
-		<br/>
-		PW:<br/>
-		<input type="password" class="pwField" id="pwField">
-		<br/>
-		<input type="button" class="submit" id="submit"
-		 value="Submit" onclick="doThis()">
+    <form class="inputForm" id="inputForm">
+        Username:
+        <br/>
+        <input type="text" class="usernameField" id="usernameField">
+        <br/> PW:
+        <br/>
+        <input type="password" class="pwField" id="pwField">
+        <br/>
+        <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
 </body>
 
 
