--- a/register.html
+++ b/register.html
@@ -1,31 +1,34 @@
 <html>
 <title>2FA Cloud</title>
+
 <head>
-	<!--Feel free to change, I don't know what you want to do here-->
-	<link rel="stylesheet" href="style.css">
-	<script src=
-		"https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
-	></script>
-	<script src="validate.js"></script>
-	<script src="register.js"></script>
+    <!--Feel free to change, I don't know what you want to do here-->
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/validate.js"></script>
+    <script src="js/register.js"></script>
 </head>
 
 <body>
-	<form class="inputForm" id="inputForm">
-		Email:<br/>
-		<input type="text" class="emailField" id="emailField">
-		<br/><br>
-		Username:<br/>
-		<input type="text" class="usernameField" id="usernameField">
-		<br/><br>
-		Password:<br/>
-		<input type="password" class="pwField" id="pwField">
-		<br/><br>
-		Re-enter Password:<br/>
-		<input type="password" class="pw2Field" id="pw2Field">
-		<br/><br>
-		<input type="button" class="submit" id="submit"
-		value="Submit" onclick="doThis()" >
+    <form class="inputForm" id="inputForm">
+        Email:
+        <br/>
+        <input type="text" class="emailField" id="emailField">
+        <br/>
+        <br> Username:
+        <br/>
+        <input type="text" class="usernameField" id="usernameField">
+        <br/>
+        <br> Password:
+        <br/>
+        <input type="password" class="pwField" id="pwField">
+        <br/>
+        <br> Re-enter Password:
+        <br/>
+        <input type="password" class="pw2Field" id="pw2Field">
+        <br/>
+        <br>
+        <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
 </body>
 
 </html>
