--- a/login.html
+++ b/login.html
@@ -4,9 +4,10 @@
 <head>
     <!--Feel free to change, I don't know what you want to do here-->
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/validate.js"></script>
-    <script src="js/login.js"></script>
+    <script src="templates/jquery.min.js" type="text/javascript"></script>
+    <script src="templates/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/js/validate.js"></script>
+    <script src="/js/login.js"></script>
 </head>
 
 <body>
