Index and login html pages are cleaned up a little.

--- a/login.html
+++ b/login.html
@@ -1,26 +1,29 @@
 <html>
-<title>2FA Cloud</title>
 
 <head>
-    <!--Feel free to change, I don't know what you want to do here-->
-    <link rel="stylesheet" href="style.css">
-    <script src="templates/jquery.min.js" type="text/javascript"></script>
-    <script src="templates/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/validate.js"></script>
-    <script src="/js/login.js"></script>
+    <title>2FA Cloud</title>
+    meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, max-width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/templates/bootstrap.min.css">
+    <link rel="stylesheet" href="/templates/global_style.css">
+
+    <script type="text/javascript" src="/templates/jquery.min.js"></script>
+    <script type="text/javascript" src="/templates/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/validate.js"></script>
+    <script type="text/javascript" src="/js/login.js"></script>
 </head>
 
 <body>
-    <form class="inputForm" id="inputForm">
-        Username:
-        <br/>
-        <input type="text" class="usernameField" id="usernameField">
-        <br/> PW:
-        <br/>
-        <input type="password" class="pwField" id="pwField">
-        <br/>
-        <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
+<form class="inputForm" id="inputForm">
+    Username:
+    <br/>
+    <input type="text" class="usernameField" id="usernameField">
+    <br/> PW:
+    <br/>
+    <input type="password" class="pwField" id="pwField">
+    <br/>
+    <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
+</form>
 </body>
-
-
 </html>
