--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, max-width=device-width, initial-scale=1">
-    <link href="templates/bootstrap.min.css" rel="stylesheet">
-    <script src="login.js" type="text/javascript"></script>
-    <script src="templates/jquery.min.js" type="text/javascript"></script>
-    <script src="templates/bootstrap.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/templates/bootstrap.min.css">
+
+    <script type="text/javascript" src="/templates/jquery.min.js"></script>
+    <script type="text/javascript" src="/templates/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/login.js"></script>
 
 </head>
 
