Gave the templates folder a little more strucutre. Someone keeps forgetting to close their <form> :P

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
     <title>2FACloud</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, max-width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/templates/bootstrap.min.css">
+    <link rel="stylesheet" href="/templates/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/templates/css/global_style.css">
 
-    <script type="text/javascript" src="/templates/jquery.min.js"></script>
-    <script type="text/javascript" src="/templates/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/templates/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/templates/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/login.js"></script>
 
 </head>
