--- a/login.html
+++ b/login.html
@@ -2,14 +2,14 @@
 
 <head>
     <title>2FA Cloud</title>
-    meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, max-width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/templates/bootstrap.min.css">
-    <link rel="stylesheet" href="/templates/global_style.css">
+    <link rel="stylesheet" href="/templates/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/templates/css/global_style.css">
 
-    <script type="text/javascript" src="/templates/jquery.min.js"></script>
-    <script type="text/javascript" src="/templates/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/templates/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/templates/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/validate.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
 </head>
