--- a/register.html
+++ b/register.html
@@ -4,31 +4,37 @@
 <head>
     <!--Feel free to change, I don't know what you want to do here-->
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/validate.js"></script>
-    <script src="js/register.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, max-width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/templates/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/templates/css/global_style.css">
+
+    <script type="text/javascript" src="/templates/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/templates/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <form class="inputForm" id="inputForm">
-        Email:
-        <br/>
-        <input type="text" class="emailField" id="emailField">
-        <br/>
-        <br> Username:
-        <br/>
-        <input type="text" class="usernameField" id="usernameField">
-        <br/>
-        <br> Password:
-        <br/>
-        <input type="password" class="pwField" id="pwField">
-        <br/>
-        <br> Re-enter Password:
-        <br/>
-        <input type="password" class="pw2Field" id="pw2Field">
-        <br/>
-        <br>
-        <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
+<form class="inputForm" id="inputForm">
+    Email:
+    <br/>
+    <input type="text" class="emailField" id="emailField">
+    <br/>
+    <br> Username:
+    <br/>
+    <input type="text" class="usernameField" id="usernameField">
+    <br/>
+    <br> Password:
+    <br/>
+    <input type="password" class="pwField" id="pwField">
+    <br/>
+    <br> Re-enter Password:
+    <br/>
+    <input type="password" class="pw2Field" id="pw2Field">
+    <br/>
+    <br>
+    <input type="button" class="submit" id="submit" value="Submit" onclick="doThis()">
+</form>
 </body>
 
 </html>
