--- a/index.html
+++ b/index.html
@@ -12,46 +12,14 @@
     <script type="text/javascript" src="/templates/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/login.js"></script>
 
+    <script type="text/javascript" src="/templates/js/load.js"></script>
+    <script type="text/javascript">
+        load(document, "home");
+    </script>
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">2FACloud</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#login">Login <span class="sr-only">(current)</span></a></li>
-                <li><a href="#register">Register</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#signout">Signout</a></li>
-                        <li><a href="#options">Options</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
+<div id="navbar"></div>
 <div id="pageContent">
     <!-- sample url for form post TODO: Change-->
     <div class="container">
