--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script type="text/javascript" src="/templates/js/jquery.min.js"></script>
     <script type="text/javascript" src="/templates/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/templates/js/md5.min.js"></script>
     <script type="text/javascript" src="/login.js"></script>
 
     <script type="text/javascript" src="/templates/js/load.js"></script>
@@ -21,24 +22,28 @@
 <body>
 <div id="navbar"></div>
 <div id="pageContent">
-    <!-- sample url for form post TODO: Change-->
     <div class="container">
-        <form class="inputForm" id="inputForm" method="post" action="https://2FACloud.com/authenticate/verify.js">
-            <h1>Login</h1>
-            <div class="input-group input-group-lg">
-
-                <label>User Name</label>
-                <br/>
-                <input type="text" class="form-control" id="username" placeholder="User Name">
-                <br/> <label>Password</label>
-                <br/>
-                <input type="password" class="form-control" id="password" placeholder="Password">
-                <br/><br/>
-                <input type="submit" class="btn btn-default btn-lg submit" id="submit" value="Submit">
+        <h1>Login</h1>
+        <div class="col-md-4 input-group input-group-lg">
+            <div class="form-group">
+                <label for="usernameField">User Name</label>
+                <input type="text" class="form-control" id="usernameField" placeholder="User Name">
             </div>
-        </form>
 
+            <div class="form-group">
+                <label for="passwordField">Password</label>
+                <input type="password" class="form-control" id="passwordField" placeholder="Password">
+            </div>
+
+            <div class="checkbox">
+                <label><input type="checkbox">Remember Me</label>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default" id="submit" onclick="callLogin()"> Login</button>
+            </div>
+        </div>
     </div>
+</div>
 </div>
 </body>
 
